Modified repo for PDM

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gcan-boiler-plate</name>
+	<name>power-distribution-module-2022</name>
 	<comment></comment>
 	<projects>
 	</projects>
